--- a/index.html
+++ b/index.html
@@ -76,16 +76,16 @@
 		<div class="halaman halaman-7">
 			<div class="kotak">
 				<h1 class="ml4">
-					<span class="letters letters-1">I HAVE</span>
-					<span class="letters letters-2">FEELING FOR YOU</span>
-					<span class="letters letters-3">MEME</span>
+					<span class="letters letters-1">I HAVE FEELING FOR YOU</span>
+					<span class="letters letters-2">MEME</span>
+					<span class="letters letters-3">Can i8 be u8r bf</span>
 				</h1>
 			</div>
 		</div>
 
 		<div class="halaman halaman-8">
 			<div class="kotak">
-				<h1 class="ml12">I hope i can be the person who is always there for you when you are happy or sad</h1>
+				<h1 class="ml12">If you accept me, i will try to be the best for you</h1>
 			</div>
 		</div>
 
@@ -93,7 +93,7 @@
 			<div class="kotak">
 				<h1 class="ml14">
 					<span class="text-wrapper">
-						<span class="letters">If you accept me, i will try to be the best for you</span>
+						<span class="letters">I hope i can be the person who is always there for you when you are happy or sad</span>
 						<span class="line"></span>
 					</span>
 				</h1>
