--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 				<h1 class="ml4">
 					<span class="letters letters-1">I HAVE FEELING FOR YOU</span>
 					<span class="letters letters-2">MEME</span>
-					<span class="letters letters-3">Can i8 be u8r bf</span>
+					<span class="letters letters-3">Can i be ur bf?</span>
 				</h1>
 			</div>
 		</div>
