--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 				<h1 class="ml1">
 					<span class="text-wrapper">
 						<span class="line line1"></span>
-						<span class="letters">Halo</span>
+						<span class="letters">Tap Me</span>
 						<span class="line line2"></span>
 					</span>
 				</h1>
@@ -38,14 +38,14 @@
 		<div class="halaman halaman-2">
 			<div class="kotak">
 				<h1 class="ml15">
-					<span class="word">Hi</span>
-					<span class="word">Meme</span>
+					<span class="word">Hello there,</span>
+					<span class="word">it's me again</span>
 				</h1>
 			</div>
 		</div>
 		<div class="halaman halaman-3">
 			<div class="kotak">
-				<h1 class="ml16">You know what I've realized lately?</h1>
+				<h1 class="ml16">i bet you already know where's this thing gonna take you</h1>
 			</div>
 		</div>
 		<div class="halaman halaman-4">
@@ -53,7 +53,7 @@
 				<h1 class="ml11">
 					<span class="text-wrapper">
 						<span class="line line1"></span>
-						<span class="letters">Looking back at all the moments we've shared</span>
+						<span class="letters">in a million words in our language, none of them can describe the way you make me feel</span>
 					</span>
 				</h1>
 			</div>
@@ -62,30 +62,30 @@
 			<div class="kotak">
 				<h1 class="ml9">
 					<span class="text-wrapper">
-						<span class="letters">I can't help but admit that you've become someone incredibly special to me</span>
+						<span class="letters">but i can't carry this feeling, so i think i want you to know</span>
 					</span>
 				</h1>
 			</div>
 		</div>
 		<div class="halaman halaman-6">
 			<div class="kotak">
-				<h1 class="ml2">I can't keep this to myself any longer</h1>
+				<h1 class="ml2">"Three words, Eight letters" yeah, i love you</h1>
 			</div>
 		</div>
 
 		<div class="halaman halaman-7">
 			<div class="kotak">
 				<h1 class="ml4">
-					<span class="letters letters-1">I HAVE FEELING FOR YOU</span>
-					<span class="letters letters-2">MEME</span>
-					<span class="letters letters-3">Can i be ur bf?</span>
+					<span class="letters letters-1">will you be</span>
+					<span class="letters letters-2">my</span>
+					<span class="letters letters-3">girlfriend?</span>
 				</h1>
 			</div>
 		</div>
 
 		<div class="halaman halaman-8">
 			<div class="kotak">
-				<h1 class="ml12">If you accept me, i will try to be the best for you</h1>
+				<h1 class="ml12">if your answer is "yes" please add/like the spotify playlist and if it's "no" please send the playlist back to me</h1>
 			</div>
 		</div>
 
@@ -93,7 +93,7 @@
 			<div class="kotak">
 				<h1 class="ml14">
 					<span class="text-wrapper">
-						<span class="letters">I hope i can be the person who is always there for you when you are happy or sad</span>
+						<span class="letters">I hope i can be the one who got your back and stand up right beside you through your ups and downs</span>
 						<span class="line"></span>
 					</span>
 				</h1>
